--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "gatsby": "^2.23.10",
+    "gatsby-cli": "^2.12.60",
     "gatsby-image": "^2.4.8",
     "gatsby-plugin-feed": "^2.5.6",
     "gatsby-plugin-google-analytics": "^2.3.5",
