--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-remark-copy-linked-files": "^2.3.15",
     "gatsby-remark-images": "^3.3.30",
     "gatsby-remark-prismjs": "^3.5.13",
+    "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-responsive-iframe": "^2.4.14",
     "gatsby-remark-smartypants": "^2.3.11",
     "gatsby-source-filesystem": "^2.3.30",
